--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,8 @@
       content="Web site created using create-react-app"
     />
 
-    <!-- BULMA
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css"> -->
+    <!-- BULMA -->
+   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
